--- a/page.html
+++ b/page.html
@@ -550,7 +550,7 @@
   <!-- Contact Section -->
   <section
     id="contact"
-    class="w-full min-h-screen py-12 md:py-16 lg:py-24 bg-gray-50"
+    class="w-full py-12 md:py-16 lg:py-24 bg-gray-50"
   >
     <div class="w-[92%] md:w-[85%] lg:w-[70%] mx-auto">
       <h2 class="text-center text-3xl md:text-4xl font-bold text-green-700 mb-2">
