Alignment issues resolved

--- a/page.html
+++ b/page.html
@@ -233,7 +233,7 @@
       </h2>
       <div class="flex flex-col md:flex-row gap-10 md:gap-12 lg:gap-14 xl:gap-16 2xl:gap-20 items-center">
         <div class="flex justify-center md:justify-start text-center md:text-left">
-          <h1 class="text-gray-200 text-4xl leading-tight md:text-[6rem] md:leading-tight lg:text-[8rem] xl:text-[9rem] 2xl:text-[10rem] font-extrabold select-none pointer-events-none">
+          <h1 class="text-gray-200 text-6xl leading-tight md:text-[6rem] md:leading-tight lg:text-[8rem] xl:text-[9rem] 2xl:text-[10rem] font-extrabold select-none pointer-events-none">
             Farmer <br />
             First <br />
             Always
@@ -338,8 +338,8 @@
   </section>
 
   <!-- Modernised Nursery & Techniques Section -->
-  <section class="w-full py-16 bg-white">
-    <div class="w-[70%] mx-auto">
+  <section class="w-full py-10 bg-white">
+    <div class="w-[90%] md:w-[70%] lg:[w-70%] mx-auto">
       <h2 class="text-3xl md:text-4xl font-bold text-center text-green-700 mb-8">
         Modernised Nursery &amp; Techniques
       </h2>
@@ -372,7 +372,7 @@
   </section>
 
   <!-- Our Products Section -->
-  <section class="w-full py-14 bg-white">
+  <section class="w-full py-10 bg-white">
     <div class="w-[70%] mx-auto">
       <h2 class="text-3xl md:text-4xl font-bold text-center text-green-700 mb-10">
         Our Products
@@ -490,7 +490,7 @@
 
   <!-- Seedless Farming Process Section -->
   <section class="w-full h-full py-10 md:py-14 lg:py-20">
-    <div class="w-[92%] md:w-[85%] lg:w-[70%] mx-auto border rounded-xl p-6 md:p-10 bg-gray-50">
+    <div class="w-[92%] md:w-[85%] lg:w-[70%] mx-auto border border-black rounded-xl p-6 md:p-10 bg-gray-50">
       <h2 class="text-3xl md:text-4xl font-bold text-center text-green-700 mb-2">
         Seedless Farming Process
       </h2>
