--- a/page.html
+++ b/page.html
@@ -3,7 +3,7 @@
   <section id="home" class="relative h-screen w-full sm:px-10 p-2">
     <!-- Background Image -->
     <img
-      src="./public/images/heroimage.png"
+      src="https://res.cloudinary.com/dsxfpu2tk/image/upload/f_auto,q_auto,w_1200/v1768288541/heroimage_qhxtc5.png"
       alt="Agaate Hero"
       class="absolute inset-0 w-full h-full object-fill"
     />
@@ -144,7 +144,7 @@
         </div>
         <div class="relative w-full h-[260px] sm:h-[320px] md:h-[380px] rounded-3xl overflow-hidden">
           <img
-            src="./public/images/team.png"
+            src="https://res.cloudinary.com/dsxfpu2tk/image/upload/f_auto,q_auto,w_400/v1768288987/team_img_cwqm3p.jpg"
             alt="Meet the Agaate Team"
             class="w-full h-full object-cover"
           />
@@ -166,14 +166,14 @@
           data-tab="buyer"
           class="brand-tab px-6 py-2 md:px-12 md:py-3 rounded-xl font-semibold shadow text-sm md:text-base bg-yellow-400 text-white"
         >
-          Buyer
+          Partners
         </button>
-        <button
+        <!-- <button
           data-tab="seller"
           class="brand-tab px-6 py-2 md:px-12 md:py-3 rounded-xl font-semibold shadow text-sm md:text-base bg-white text-green-700 border"
         >
           Seller
-        </button>
+        </button> -->
         <button
           data-tab="vegSeller"
           class="brand-tab px-6 py-2 md:px-12 md:py-3 rounded-xl font-semibold shadow text-sm md:text-base bg-white text-green-700 border"
@@ -183,8 +183,10 @@
       </div>
 
       <!-- Logos Grid -->
-      <div id="brands-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6 md:gap-10 lg:gap-12 items-center justify-items-center">
-        <!-- Brands will be populated by JavaScript -->
+      <div class="w-full overflow-hidden">
+        <div id="brands-container" class="flex w-max animate-marquee gap-6 px-4 items-center md:w-full md:grid md:grid-cols-4 lg:grid-cols-5 md:gap-10 lg:gap-12 md:justify-items-center md:animate-none">
+          <!-- Brands will be populated by JavaScript -->
+        </div>
       </div>
     </div>
   </section>
@@ -202,7 +204,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12 items-center">
         <div class="relative w-full h-56 sm:h-64 md:h-72 lg:h-80">
           <img
-            src="./public/images/journey.png"
+            src="https://res.cloudinary.com/dsxfpu2tk/image/upload/f_auto,q_auto,w_400/v1768289082/journey_npfw3g.png"
             alt="Crop growth journey"
             class="w-full h-full object-contain"
           />
@@ -310,10 +312,21 @@
           <div class="relative w-full h-56 sm:h-64 md:h-72 lg:h-80 rounded-2xl overflow-hidden">
             <img
               id="ecosystem-image"
-              src="./public/images/smart-nursery.jpg"
               alt="Ecosystem"
-              class="w-full h-full object-cover"
+              class="w-full h-full object-cover transition-opacity duration-500"
             />
+            <button
+              id="eco-prev"
+              class="absolute left-3 top-1/2 -translate-y-1/2 bg-white/70 hover:bg-white text-green-700 px-3 py-1 rounded-full shadow-md transition opacity-100 group-hover:opacity-100"
+            >
+              ‹
+            </button>
+            <button
+              id="eco-next"
+              class="absolute right-3 top-1/2 -translate-y-1/2 bg-white/70 hover:bg-white text-green-700 px-3 py-1 rounded-full shadow-md transition opacity-100 group-hover:opacity-100"
+            >
+              ›
+            </button>
           </div>
         </div>
         <div class="flex flex-col md:items-start gap-3">
@@ -346,7 +359,6 @@
       <div class="relative w-full h-72 md:h-96 rounded-3xl overflow-hidden">
         <img
           id="nursery-slide"
-          src="./public/images/nursery-1.jpg"
           alt="Nursery"
           class="w-full h-full object-cover"
         />
@@ -392,7 +404,6 @@
       <div class="relative w-full h-48 sm:h-56 md:h-72 lg:h-80 rounded-2xl md:rounded-3xl overflow-hidden shadow-xl">
         <img
           id="mall-banner"
-          src="./public/images/mall1.jpg"
           alt="Kisan Mall Banner"
           class="w-full h-full object-cover transition duration-500"
         />
@@ -410,7 +421,7 @@
         <div class="flex flex-col gap-3">
           <div class="relative w-full h-44 sm:h-48 md:h-56 rounded-2xl overflow-hidden">
             <img
-              src="./public/images/news1.jpg"
+              src="https://res.cloudinary.com/dsxfpu2tk/image/upload/v1768295571/news1_k3k5ho.png"
               alt="News"
               class="w-full h-full object-cover"
             />
@@ -425,7 +436,7 @@
         <div class="flex flex-col gap-3">
           <div class="relative w-full h-44 sm:h-48 md:h-56 rounded-2xl overflow-hidden">
             <img
-              src="./public/images/news2.jpg"
+              src="https://res.cloudinary.com/dsxfpu2tk/image/upload/v1768295565/news2_gshwmz.png"
               alt="News"
               class="w-full h-full object-cover"
             />
@@ -441,7 +452,7 @@
           <div class="flex gap-3 items-start">
             <div class="relative w-20 h-14 sm:w-24 sm:h-16 rounded-xl overflow-hidden flex-shrink-0">
               <img
-                src="./public/images/n1.jpg"
+                src="https://res.cloudinary.com/dsxfpu2tk/image/upload/v1768295617/n1_tdlhyt.jpg"
                 alt="News Item"
                 class="w-full h-full object-cover"
               />
@@ -453,7 +464,7 @@
           <div class="flex gap-3 items-start">
             <div class="relative w-20 h-14 sm:w-24 sm:h-16 rounded-xl overflow-hidden flex-shrink-0">
               <img
-                src="./public/images/nursery-2.jpg"
+                src="https://res.cloudinary.com/dsxfpu2tk/image/upload/v1768295700/nursery-2_hu5lz4.jpg"
                 alt="News Item"
                 class="w-full h-full object-cover"
               />
@@ -465,7 +476,7 @@
           <div class="flex gap-3 items-start">
             <div class="relative w-20 h-14 sm:w-24 sm:h-16 rounded-xl overflow-hidden flex-shrink-0">
               <img
-                src="./public/images/nursery-3.jpg"
+                src="https://res.cloudinary.com/dsxfpu2tk/image/upload/v1768295701/nursery-3_rep7vz.png"
                 alt="News Item"
                 class="w-full h-full object-cover"
               />
@@ -482,7 +493,7 @@
   <!-- farmer img Section -->
   <section class="w-full relative h-[230px] md:h-[500px]">
     <img
-      src="./public/images/farmer.png"
+      src="https://res.cloudinary.com/dsxfpu2tk/image/upload/v1768295743/farmer_e6phxl.png"
       alt="Farmer"
       class="w-full h-full object-contain xl:object-cover 2xl:object-fill"
     />
@@ -552,16 +563,16 @@
     id="contact"
     class="w-full py-12 md:py-16 lg:py-24 bg-gray-50"
   >
-    <div class="w-[92%] md:w-[85%] lg:w-[70%] mx-auto">
+    <div class="w-full flex flex-col text-center">
       <h2 class="text-center text-3xl md:text-4xl font-bold text-green-700 mb-2">
         Get In Touch
       </h2>
       <p class="text-center text-gray-600 mb-10 text-sm md:text-base">
         Have questions about our products or seedless farming technology? We're here to help.
       </p>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-stretch">
+      <div class="grid grid-cols-1 md:grid-cols-1 gap-8 items-stretch">
         <!-- LEFT — FORM -->
-        <div class="bg-white rounded-xl shadow p-6 md:p-7 space-y-4 flex flex-col h-full">
+        <!-- <div class="bg-white rounded-xl shadow p-6 md:p-7 space-y-4 flex flex-col h-full">
           <div>
             <label class="text-sm font-semibold block mb-1">Full Name</label>
             <input class="border rounded-md w-full p-2 text-sm md:text-base" type="text" />
@@ -585,47 +596,47 @@
           <button class="w-full bg-green-600 text-white py-2 rounded-md font-semibold">
             Send Message
           </button>
-        </div>
+        </div> -->
 
         <!-- RIGHT — ADDRESSES -->
-        <div class="flex flex-col gap-5 h-full">
-          <div class="bg-white rounded-xl shadow p-5 flex gap-4 flex-1">
-            <div class="w-9 h-9 rounded-full bg-green-100 flex items-center justify-center text-green-700">
-              📍
-            </div>
-            <div>
-              <p class="font-semibold mb-1">Address</p>
-              <p class="text-sm text-gray-600 leading-relaxed">
-                1234 Agricultural Boulevard <br />
-                Farmville, AG 12345, United States
-              </p>
-            </div>
-          </div>
-          <div class="bg-white rounded-xl shadow p-5 flex gap-4 flex-1">
-            <div class="w-9 h-9 rounded-full bg-green-100 flex items-center justify-center text-green-700">
-              📍
-            </div>
-            <div>
-              <p class="font-semibold mb-1">Address</p>
-              <p class="text-sm text-gray-600 leading-relaxed">
-                1234 Agricultural Boulevard <br />
-                Farmville, AG 12345, United States
-              </p>
-            </div>
-          </div>
-          <div class="bg-white rounded-xl shadow p-5 flex gap-4 flex-1">
-            <div class="w-9 h-9 rounded-full bg-green-100 flex items-center justify-center text-green-700">
-              📍
-            </div>
-            <div>
-              <p class="font-semibold mb-1">Address</p>
-              <p class="text-sm text-gray-600 leading-relaxed">
-                1234 Agricultural Boulevard <br />
-                Farmville, AG 12345, United States
-              </p>
-            </div>
+        <div class="flex justify-center">
+      <div class="flex flex-col gap-5 items-center w-full max-w-md">
+
+        <div class="bg-white rounded-xl shadow p-5 flex gap-4 w-full">
+          <div class="w-9 h-9 rounded-full bg-green-100 flex items-center justify-center text-green-700">📍</div>
+          <div class="text-left">
+            <p class="font-semibold mb-1">Farm Address</p>
+            <p class="text-sm text-gray-600 leading-relaxed">
+              8WG2+QR6 Agaate - Anzix Farm, NH8,<br>
+              opposite Bikanervala, Kukrola, Gurugram, Haryana 122413
+            </p>
           </div>
         </div>
+
+        <div class="bg-white rounded-xl shadow p-5 flex gap-4 w-full">
+          <div class="w-9 h-9 rounded-full bg-green-100 flex items-center justify-center text-green-700">📍</div>
+          <div class="text-left">
+            <p class="font-semibold mb-1">Kisan Mall Address</p>
+            <p class="text-sm text-gray-600 leading-relaxed">
+              Agaate Kisan Mall, Bilaspur Rd, Patti Kawan,<br>
+              Bhora Kalan, Bilaspur Kalan, Gurugram, Haryana 122413
+            </p>
+          </div>
+        </div>
+
+        <div class="bg-white rounded-xl shadow p-5 flex gap-4 w-full">
+          <div class="w-9 h-9 rounded-full bg-green-100 flex items-center justify-center text-green-700">📍</div>
+          <div class="text-left">
+            <p class="font-semibold mb-1">Email Address</p>
+            <a href="mailto:ankit@agaate.in" class="text-sm text-green-700 hover:underline">
+              ankit@agaate.in
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
       </div>
     </div>
   </section>
