--- a/page.html
+++ b/page.html
@@ -27,24 +27,26 @@
 
         <div class="w-full flex gap-10 justify-center mt-5">
           <!-- Explore Button -->
-          <button class="text-white bg-green-600 px-5 py-1 rounded-2xl flex items-center gap-2 font-bold">
-            Explore
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="18"
-              height="18"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="bg-yellow-400 rounded-2xl"
-            >
-              <path d="M5 12h14" />
-              <path d="m12 5 7 7-7 7" />
-            </svg>
-          </button>
+          <a href="#nursery">
+            <button class="text-white bg-green-600 px-5 py-1 rounded-2xl flex items-center gap-2 font-bold">
+              Explore
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="bg-yellow-400 rounded-2xl"
+              >
+                <path d="M5 12h14" />
+                <path d="m12 5 7 7-7 7" />
+              </svg>
+            </button>
+          </a>
 
           <!-- Contact Button (Outlined) -->
           <a
@@ -74,12 +76,14 @@
   </section>
 
   <!-- Stats Section -->
-  <section class="w-full bg-white">
-    <div
-      id="stats-container"
-      class="w-full flex flex-col md:flex-row justify-around md:justify-between gap-6 md:gap-4 py-10 md:py-14 lg:py-20 px-4 sm:px-8 md:px-12 lg:px-20 text-white"
-    >
-      <!-- Stats will be populated by JavaScript -->
+  <section class="w-full bg-white overflow-hidden">
+    <div class="relative w-full py-10 md:py-14 lg:py-20">
+      <div
+        id="stats-wrapper"
+        class="flex w-max gap-2 sm:gap-6 md:gap-10 px-4 sm:px-6 md:px-12 stats-marquee"
+      >
+        <!-- Stats will be populated by JavaScript -->
+      </div>
     </div>
   </section>
 
@@ -168,24 +172,34 @@
         >
           Partners
         </button>
-        <!-- <button
+        <button
           data-tab="seller"
           class="brand-tab px-6 py-2 md:px-12 md:py-3 rounded-xl font-semibold shadow text-sm md:text-base bg-white text-green-700 border"
         >
-          Seller
-        </button> -->
+          Key Customers
+        </button>
         <button
           data-tab="vegSeller"
           class="brand-tab px-6 py-2 md:px-12 md:py-3 rounded-xl font-semibold shadow text-sm md:text-base bg-white text-green-700 border"
         >
-          Veg Seller
+          Veg Buyers
         </button>
       </div>
 
       <!-- Logos Grid -->
-      <div class="w-full overflow-hidden">
-        <div id="brands-container" class="flex w-max animate-marquee gap-6 px-4 items-center md:w-full md:grid md:grid-cols-4 lg:grid-cols-5 md:gap-10 lg:gap-12 md:justify-items-center md:animate-none">
-          <!-- Brands will be populated by JavaScript -->
+      <div class="relative w-full overflow-hidden">
+        <!-- Scroll Container -->
+        <div
+          id="brands-scroll"
+          class="w-full overflow-x-auto no-scrollbar cursor-grab active:cursor-grabbing"
+        >
+          <!-- Auto-scroll Track -->
+          <div
+            id="brands-container"
+            class="flex w-max gap-6 md:gap-10 lg:gap-12 px-4 md:px-6 items-center brands-marquee"
+          >
+            <!-- Brands injected here -->
+          </div>
         </div>
       </div>
     </div>
@@ -351,7 +365,7 @@
   </section>
 
   <!-- Modernised Nursery & Techniques Section -->
-  <section class="w-full py-10 bg-white">
+  <section class="w-full py-10 bg-white" id="nursery">
     <div class="w-[90%] md:w-[70%] lg:[w-70%] mx-auto">
       <h2 class="text-3xl md:text-4xl font-bold text-center text-green-700 mb-8">
         Modernised Nursery &amp; Techniques
