--- a/page.html
+++ b/page.html
@@ -1,12 +1,36 @@
 <main class="min-h-screen md:mb-0 lg:md-0 mb-0">
   <!-- Hero Section -->
   <section id="home" class="relative h-screen w-full sm:px-10 p-2">
-    <!-- Background Image -->
-    <img
-      src="https://res.cloudinary.com/dsxfpu2tk/image/upload/f_auto,q_auto,w_1200/v1768288541/heroimage_qhxtc5.png"
-      alt="Agaate Hero"
-      class="absolute inset-0 w-full h-full object-fill"
-    />
+    
+    <!-- Hero Background Slider -->
+    <div class="absolute inset-0 overflow-hidden">
+      <img
+        id="hero-img-1"
+        class="absolute inset-0 w-full h-full object-fill transition-opacity duration-700 opacity-100"
+        alt="Hero"
+      />
+      <img
+        id="hero-img-2"
+        class="absolute inset-0 w-full h-full object-fill transition-opacity duration-700 opacity-0"
+        alt="Hero"
+      />
+    </div>
+
+
+    <!-- Hero Navigation Buttons -->
+    <button
+      id="hero-prev"
+      class="absolute left-4 top-1/2 -translate-y-1/2 z-20 bg-white/70 hover:bg-white text-green-700 px-4 py-2 rounded-full shadow"
+    >
+      ‹
+    </button>
+
+    <button
+      id="hero-next"
+      class="absolute right-4 top-1/2 -translate-y-1/2 z-20 bg-white/70 hover:bg-white text-green-700 px-4 py-2 rounded-full shadow"
+    >
+      ›
+    </button>
 
     <!-- Overlay -->
     <div class="relative h-screen w-full">
