Mobile number added

--- a/page.html
+++ b/page.html
@@ -572,6 +572,10 @@
                 <a href="mailto:ankit@agaate.in" class="text-sm text-green-700 hover:underline">
                   info@agaate.in
                 </a>
+                <p class="font-semibold mb-1">Contact Number</p>
+                <a href="tel:+918350085005" class="block text-sm text-green-700 hover:underline mt-1">
+                  8350085005
+                </a>
               </div>
             </div>
           
